# dream-conveyor

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  run.py
example/: conf.yml
scripts/: audio.py  esgran.py  interrogation.py  make_gif_example.py
src/: config.py  conveyor.py  enums.py  utils.py
tests/: test_conveyor.py
