[tool.poetry]
name = "dream-conveyor"
version = "0.1.0"
description = "This is a small tool I use to experiment w/ Stable Diffusion"
authors = ["Vsevolod Glumov <seva17@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
diffusers = "^0.16.1"
torch = "^2.0.1"
transformers = "^4.29.2"
accelerate = "^0.19.0"
matplotlib = "^3.7.1"
deepspeed = "^0.9.2"
ftfy = "^6.1.1"
colorama = "^0.4.6"
opencv-python = "^4.7.0"
black = "^23.3.0"
isort = "^5.12.0"
safetensors = "^0.3.1"
scipy = "^1.10.1"
autoflake = "^2.2.0"
imageio = "^2.31.1"
clip-interrogator = "0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
