[project]
name = "dream-conveyor"
version = "0.1.0"
requires-python = ">=3.9,<3.12"
description = "This is a small tool I use to experiment w/ Stable Diffusion"
dependencies = [
  "diffusers>=0.16.1,<1.0.0",
  "torch>=2.0.1,<3.0.0",
  "transformers>=4.29.2,<5.0.0",
  "accelerate>=0.19.0,<1.0.0",
  "matplotlib>=3.7.1,<4.0.0",
  "deepspeed>=0.9.2,<1.0.0",
  "ftfy>=6.1.1,<7.0.0",
  "colorama>=0.4.6,<1.0.0",
  "opencv-python>=4.7.0,<5.0.0",
  "black>=23.3.0,<24.0.0",
  "isort>=5.12.0,<6.0.0",
  "safetensors>=0.3.1,<1.0.0",
  "scipy>=1.10.1,<2.0.0",
  "autoflake>=2.2.0,<3.0.0",
  "imageio>=2.31.1,<3.0.0",
  "clip-interrogator==0.6.0"
]
